--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -4,20 +4,11 @@
 #  © 2020 Cotes Chung
 #  MIT Licensed
 
--
-  type: github
-  icon: 'fab fa-github-alt'
--
-  type: twitter
-  icon: 'fab fa-twitter'
--
-  type: email
-  icon: 'fas fa-envelope'
-  noblank: true            # open link in current tab
--
-  type: rss
-  icon: 'fas fa-rss'
-  noblank: true
+- type: github
+  icon: "fab fa-github-alt"
+- type: email
+  icon: "fas fa-envelope"
+  noblank: true # open link in current tab
 
 # Uncomment and complete the url below to enable more contact options
 # -
