--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: "shin youbin" # the main title
+title: Shin youbin # the main title
 
 # tagline: 신나는 유빈생활 # it will display as the sub-title
 
@@ -78,7 +78,7 @@ theme_mode: # [light|dark]
 img_cdn: ""
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/img/profile.jpg"
+avatar:  "/assets/img/profile.jpg"
 
 # boolean type, the global switch for ToC in posts.
 toc: true
