--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,12 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Shin youbin # the main title
+title: 신나는 유빈생활 # the main title
 
-# tagline: 신나는 유빈생활 # it will display as the sub-title
+tagline: Shin youbin # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Web, python, computer science 등에 대해 공부한 내용과 알고리즘 풀이 해설를 공유하는 성장을 꿈꾸는 새싹 개발자 블로그입니다.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://youbin-shin.github.io"
@@ -78,7 +76,7 @@ theme_mode: # [light|dark]
 img_cdn: ""
 
 # the avatar on sidebar, support local or CORS resources
-avatar:  "/assets/img/profile.jpg"
+avatar: "/assets/img/profile.jpg"
 
 # boolean type, the global switch for ToC in posts.
 toc: true
