blog | post 8 개 추가, 사이드바에 github 주소 에러 수정

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ url: "https://youbin-shin.github.io"
 author: ShinYouBin # change to your full name
 
 github:
-  username: github_youbin-shin # change to your github username
+  username: youbin-shin # change to your github username
 
 social:
   name: shin_youbin # it will shows as the copyright owner in Footer
